[package]
name = "zrglng"
version = "0.1.0"
authors = ["Justin Rerolle <justin.rerolle@sap.com>"]
edition = "2018"

[dependencies]
async-std = "0.99.4"
futures-preview = { version = "0.3.0-alpha.18", features = ["async-await", "nightly"] }
pretty_env_logger = "0.3"
log = "0.4"
isahc = "0.7.2"
url = "2.1.0"
http = "0.1.18"
