[package]
name = "zrglng"
version = "0.1.0"
authors = ["JustinRlle <justinrlle@pm.me>"]
edition = "2018"

[dependencies]
futures-util = "0.3"
pretty_env_logger = "0.3"
log = "0.4"
url = "2.1.0"
structopt = "0.3.0"
crossbeam-channel = "0.3.9"

[dependencies.reqwest]
version = "0.10"
features = ["native-tls", "stream"]

[dependencies.tokio]
version = "0.2"
features = ["fs", "rt-core", "blocking", "stream", "io-util"]
